# mcserver

./: .gitignore  .gitmodules  CMakeLists.txt
build.debug/lib/RakNet/: Makefile  cmake_install.cmake
build.debug/lib/RakNet/Lib/: Makefile  cmake_install.cmake
build.debug/lib/RakNet/Lib/DLL/: Makefile  cmake_install.cmake
src/: main.cpp
